catalog-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  type: ClusterIP
  selector:
    app: catalog
    tier: backend
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080
